<resources>
    <string name="app_name">Exercises</string>
    <string name="action_settings">Settings</string>
    <string name="filters">Filters</string>
    <string name="expand_filters">Expand filters</string>
    <string name="choose_muscle_group">Choose muscle group</string>
    <string name="choose_muscle">Choose muscle</string>
    <string name="choose_equipment">Choose equipment</string>
    <string name="exercise_image">Exercise image</string>
    <string name="apply_filters">Apply filters</string>
    <string name="start_position_image">Start position image</string>
    <string name="finish_position_image">Finish position image</string>
</resources>
