<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="exercisesListModel"
            type="com.dimaoprog.exercises.exercisesList.ExercisesListViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_m"
        android:paddingTop="@dimen/padding_m"
        android:paddingEnd="@dimen/padding_m"
        tools:context=".exercisesList.ExercisesListFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/filters"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/btn_expand_filters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/expand_filters"
                android:src="@drawable/ic_arrow_drop_down_orange" />

            <LinearLayout
                android:id="@+id/layout_filters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_expand_filters"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/shape_item_filters"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <Spinner
                    android:id="@+id/spinner_categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:prompt="@string/choose_muscle_group" />

                <Spinner
                    android:id="@+id/spinner_equipment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:prompt="@string/choose_equipment" />

                <Button
                    android:id="@+id/btn_apply_filters"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:onClick="@{() -> exercisesListModel.loadFirstPage()}"
                    android:text="@string/apply_filters" />

            </LinearLayout>

        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_exercises_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:visibility="@{exercisesListModel.showProgress ? View.VISIBLE : View.INVISIBLE}" />
        </FrameLayout>
    </LinearLayout>
</layout>